@@ -4,6 +4,8 @@
 
 ACE_RCSID(ace, OS_main, "$Id$")
 
+#if !defined (ACE_DOESNT_DEFINE_MAIN)
+
 #if defined (ACE_HAS_NONSTATIC_OBJECT_MANAGER) && !defined (ACE_DOESNT_INSTANTIATE_NONSTATIC_OBJECT_MANAGER)
 
 #include "ace/Init_ACE.h"
@@ -124,4 +126,7 @@ ACE_END_VERSIONED_NAMESPACE_DECL
 
 #  endif   /* !ACE_HAS_WINCE */
 
-# endif /* ACE_HAS_NONSTATIC_OBJECT_MANAGER && !ACE_HAS_WINCE && !ACE_DOESNT_INSTANTIATE_NONSTATIC_OBJECT_MANAGER */
+#endif /* ACE_HAS_NONSTATIC_OBJECT_MANAGER && !ACE_HAS_WINCE && !ACE_DOESNT_INSTANTIATE_NONSTATIC_OBJECT_MANAGER */
+
+#endif /* ACE_DOESNT_DEFINE_MAIN */
+
